; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_cdda.c_Close.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_cdda.c_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i8* }

@demux_sys_t = common dso_local global i32 0, align 4
@vcddev = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"Invalid cast\00", align 1
@access_sys_t = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %3, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** %4, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @AccessClose(i8* %15)
  br label %17

17:                                               ; preds = %14, %1
  %18 = load i32, i32* @demux_sys_t, align 4
  %19 = load i32, i32* @vcddev, align 4
  %20 = call i64 @offsetof(i32 %18, i32 %19)
  %21 = icmp eq i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @static_assert(i32 %22, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %24 = load i32, i32* @access_sys_t, align 4
  %25 = load i32, i32* @vcddev, align 4
  %26 = call i64 @offsetof(i32 %24, i32 %25)
  %27 = icmp eq i64 %26, 0
  %28 = zext i1 %27 to i32
  %29 = call i32 @static_assert(i32 %28, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %30 = load i32*, i32** %2, align 8
  %31 = load i8*, i8** %4, align 8
  %32 = bitcast i8* %31 to i32**
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @ioctl_Close(i32* %30, i32* %33)
  ret void
}

declare dso_local i32 @AccessClose(i8*) #1

declare dso_local i32 @static_assert(i32, i8*) #1

declare dso_local i64 @offsetof(i32, i32) #1

declare dso_local i32 @ioctl_Close(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
